# psyche

./: .editorconfig  .gitattributes  .gitignore  .ocp-indent  AUTHORS.md  CONTRIBUTING.md  Makefile  README.md  basic.ml  binary.ml  branch.wat  dune-project  exec.js  index.html  multi-export.txt  package.json  psyche.install  psyche.opam
.circleci/: config.yml
.github/: FUNDING.yml
compiler/: .gitignore  Makefile  README.md  binary.ml  binary.mli  compiler.ml  dune-project  ir.ml  ir.mli  list_utils.ml  parser.ml  parser.mli  parser_combinator.ml  parser_combinator.mli  psyche.install  psyche.opam  wasm.ml  wasm.mli
compiler/src/: compiler.ml  dune
compiler/src/ir/: ir.ml  ir.mli
compiler/src/knights/: dune  knights.ml
compiler/src/parser/: dune  parser.ml  parser.mli
compiler/src/parser_combinator/: dune  parser_combinator.ml  parser_combinator.mli
compiler/test/: comments.psy  exports_err.psy  let.psy  syntax_err.psy
compiler/test/funcall/: example.txt  example.wat  exec.js  funcall.psy
compiler2/: .gitignore  Makefile  compiler.ml  ir.ml  ir.mli  psyche.opam
knights/: README.md  dune-project  knights.opam
knights/src/: dune  main.ml
lib/: dune  math.mli
man/: psyche.1
src/: Lexer.kt  LexerReader.kt  Main.kt  TokenType.kt  basic.ml  binary.ml  binary.mli  dune  ir.ml  monadic.ml  parser.ml  parser_combinator.ml  parser_combinator.mli  parser_combinator_old.ml
test-suite/: 10-args.psy  10-args.snapshot  11-fact.psy  11-fact.snapshot  12-fib.psy  12-fib.snapshot  13-fib2.psy  14-list.psy  14-list.snapshot  15-list_sum.psy  15-list_sum.snapshot  16-cons.psy  16-cons.snapshot  16-list_ref.psy  17-sublist.psy  17-sublist.snapshot  2-example.psy  2-example.snapshot  3-comment.psy  4-branch.psy  5-let.psy  6-exports.psy  6-pub_fn.psy  6-pub_fn.snapshot  7-exports_err.psy  7-exports_err.snapshot  7-fn_err.psy  7-fn_err.snapshot  8-syntax_err.psy  (+10 more)
(+40 files in other folders)
