opam-version: "2.0"
name: "psyche"
version: "0.0.1"
maintainer: "0918nobita"
authors: [
  "0918nobita"
]
homepage: "https://github.com/0918nobita/psyche"
dev-repo: "git+https://github.com/0918nobita/psyche.git"
bug-reports: "https://github.com/0918nobita/psyche/issues"
depends: [
  "ocaml" {>= "4.07.1"}
  "dune"  {build}
  "base"
  "ppxlib"
]
