opam-version: "2.0"
name: "psyche"
version: "0.0.1"
maintainer: "0918nobita <nobita.0918@gmail.com>"
synopsis: "A WASM-friendly lightweight programming language implemented in OCaml"
authors: [
  "0918nobita"
]
homepage: "https://github.com/0918nobita/psyche"
dev-repo: "git+https://github.com/0918nobita/psyche.git"
bug-reports: "https://github.com/0918nobita/psyche/issues"
depends: [
  "ocaml" {>= "4.04.0"}
  "ocamlfind" {build}
  "base"
]
